doc/bnf.txt
The following informal BNF is used to describe the grammar

@main : query-expression

query-expression := query-variable ? query
query-variable   := 'let' VARIABLE '=' query (',' VARIABLE = query)*

// query definition
query            := primary  |
                    prefix   |
                    unary    |
                    binary   |
                    ternary

primary          := constant |
                    compound |
                    THIS     |
                    function |
                    VARIABLE |
                    ATTRIBUTE

compound         := list     |
                    pair     |
                    dict

list             := '[' list-element ']'
list-element     := __empty__  |
                    query (',' query)*

pair             := '(' query ':' query ')'

dict             := '{' dict-element '}'
dict-element     := __empty__  |
                    query ':' query (',' query ':' query )*

constant         := NUMBER |
                    STRING |
                    NULL

prefix           := primary |
                    primary prefix-index

prefix-comp      := ('.' VARIABLE)     |
                    ('[' squery ']')   |
                    ('(' arg-list ')') |
                    ('[?' query ']')   |
                    ('[|' query ']')

squery           := query (':' query ':' query)
arg-list         := query (',' query)*
prefix-index     := prefix-comp prefix-comp*

function         := 'fn' '(' arg-define ')' query
arg-define       := VARIABLE (',' VARIABLE)*

// expression level
unary            := prefix | ( '+' | '!' ) prefix
binary           := arith  | comp
factor           := unary  | unary ( "*" | "/" ) factor
term             := factor | factor ( "+" | "-" ) term
arith            := factor | term
comp             := gtls   | equal
gtls             := arith ( '<' | '>' | '<=' | '>=' ) gtls
equal            := equal ( '==' | '!=' ) equal
unary            := binary | binary 'if' binary 'else' binary
query            := unary
